sumo/tests/duarouter/errors/false_input_flows/options.duarouter
--net-file=input_net.net.xml --flows=xxx.xml -o routes.rou.xml
